
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int f; int l164; int l33; int l73; int d; } ;
typedef TYPE_1__ e ;


 int l (int ,int ,int) ;

void cp_set_invtxc(e*a,int m){{if(!(a->f!=1))goto l807;return;
l807:;}a->l164=m?1:0;{if(!(a->l164))goto l808;a->l33|=2;goto l809;
l808:;a->l33&=~2;l809:;}l(a->d,a->l73,a->l33);}
